--- a/src/librarySystemcodes/LibSplash.form
+++ b/src/librarySystemcodes/LibSplash.form
@@ -61,7 +61,7 @@
                   <EmptySpace min="-2" pref="40" max="-2" attributes="0"/>
                   <Component id="jLabel3" min="-2" pref="363" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
-                  <Component id="labelyear" min="-2" max="-2" attributes="0"/>
+                  <Component id="labelyear" min="-2" pref="39" max="-2" attributes="0"/>
                   <EmptySpace max="32767" attributes="0"/>
               </Group>
           </Group>
@@ -102,7 +102,7 @@
         <Component class="javax.swing.JLabel" name="jLabel3">
           <Properties>
             <Property name="horizontalAlignment" type="int" value="4"/>
-            <Property name="text" type="java.lang.String" value="System Version 2.2.0   Created by TOO studios &#xa9;"/>
+            <Property name="text" type="java.lang.String" value="System Version 2.2.5   Created by TOO studios &#xa9;"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="lblLoad">
